--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <!-- fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -365,24 +367,24 @@
             <div>
                 <h3 class="abilitiesh3"> Languages</h3>
             </div>
-            <div class="row">
+            <div class="row languages">
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <p class="abilitiesrowp">Turkish (Mother Tongue)</p>
                     <div class="progress" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="100"
+                            aria-valuemin="0" aria-valuemax="100" "  ></div>
                     </div>
                     <p class="abilitiesrowp">English (Daily Use)</p>
                     <div class="progress" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100""  ></div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <p class="abilitiesrowp">Spanish (Survivable)</p>
                     <div class="progress" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
+                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"  ></div>
                     </div>
                 </div>
             </div>
@@ -394,30 +396,30 @@
             <div>
                 <h3 class="abilitiesh3"> Skills</h3>
             </div>
-            <div class="row ">
+            <div class="row skills">
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <p class="abilitiesrowp">PLC-Scada</p>
                     <div class="progress" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="80"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
                     <p class="abilitiesrowp">Automation Systems</p>
                     <div class="progress" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="95"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
                     <p class="abilitiesrowp">Electrical Knowladge </p>
                     <div class="progress" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="95"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
                     <p class="abilitiesrowp">Warehouse Management Systems</p>
                     <div class="progress" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
 
@@ -425,26 +427,26 @@
 
                     <p class="abilitiesrowp">Mobile App</p>
                     <div class="progress" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
+                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="40"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
                     <p class="abilitiesrowp">Node.Js</p>
                     <div class="progress" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="50"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
                     <p class="abilitiesrowp">Html-Bootstrapt</p>
                     <div class="progress" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 45%"></div>
+                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="45"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
                     <p class="abilitiesrowp">Sql</p>
                     <div class="progress" style="height: 10px;">
-                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
+                        <div class="progress-bar progress-bar-striped bg-info " role="progressbar" aria-valuenow="30"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
             </div>
@@ -457,7 +459,7 @@
             </div>
 
             <div class="interests">
-                <div class="row">
+                <div class="row skill-section">
                     <div class="col-lg-3 col-md-4  col-sm-6 col-6">
                         <div class="icon-box">
                             <i class="fab fa-html5" style="color: #e34f26;"></i>
@@ -570,6 +572,8 @@
 
 
 
+    <!-- jquery scripts-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- bootstrap scripts -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
@@ -580,8 +584,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
+    <script src="JS/jquery.waypoints.min.js"></script>
+    <script src="JS/index.js"> </script>
 
-
-</body>
-
+</body> 
 </html>
